tests/ui/issues/issue-67039-unsound-pin-partialeq.stderr
error[E0271]: type mismatch resolving `<Rc<Apple> as Deref>::Target == Rc<Apple>`
  --> $DIR/issue-67039-unsound-pin-partialeq.rs:25:29
   |
LL |     let _ = Pin::new(Apple) == Rc::pin(Apple);
   |                             ^^ expected `Apple`, found `Rc<Apple>`
   |
   = note: expected struct `Apple`
              found struct `Rc<Apple>`
   = note: required for `Pin<Apple>` to implement `PartialEq<Pin<Rc<Apple>>>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0271`.
